crates/nash-solve/tests/snapshots/inference__recovery_field_selection_keeps_errors_independent_of_other_fields-4.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntype alias record 'a 'b = { a : 'a, b : 'b }\ntrait Missing 'a where\n    missing : 'a -> 'a\nbad : ()\nbad = missing ({ a = (assert Primitive.True), b = (assert Primitive.True).field }.b)\n"
info: diagnostic
---
nash::type::not_a_record

  × Expected a record, found `unit`.
   ╭─[Main.nash:6:51]
 5 │ bad : ()
 6 │ bad = missing ({ a = (assert Primitive.True), b = (assert Primitive.True).field }.b)
   ·                                                   ──────────────┬──────────────
   ·                                                                 ╰── field `field` access
   ╰────
