crates/nash-solve/tests/snapshots/inference__recovery_final_recursive_evidence_error_survives_an_independent_mismatch.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntype option 'a = Some 'a\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep 'a => Keep (option 'a) where\n    keep xs = xs\nnest : Keep 'a => 'a -> ()\nnest x = nest (Some x)\nsibling : ()\nsibling = \\x -> x\n"
info: diagnostic
---
nash::type::polymorphic_recursion

  × Recursive call to `nest` grows its trait requirement.
   ╭─[Main.nash:8:10]
 7 │ nest : Keep 'a => 'a -> ()
 8 │ nest x = nest (Some x)
   ·          ────
 9 │ sibling : ()
   ╰────
  help: Keep (option 'a)

        Keep trait arguments stable across recursive calls, or split the recursion.


nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
    ╭─[Main.nash:10:11]
  8 │ nest x = nest (Some x)
  9 │ sibling : ()
    ·           ─┬
    ·            ╰── declared type
 10 │ sibling = \x -> x
    ·           ───┬───
    ·              ╰── body of `sibling`
    ╰────
