crates/nash-solve/tests/snapshots/inference__recovery_keeps_independent_tuple_siblings_in_both_orders-3.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Missing 'a where\n    missing : 'a -> 'a\ntrait Round 'a where\n    create : () -> 'a\n    discard : 'a -> ()\ntype higher 'f = Higher ('f ())\nidfa : 'f 'a -> 'f 'a\nidfa x = x\nbad = ((assert Primitive.True) (assert Primitive.True), discard (create ()))\n"
info: diagnostic
---
nash::type::ambiguous_type

  × Cannot determine type `'a` in `bad`.
    ╭─[Main.nash:10:1]
  9 │ idfa x = x
 10 │ bad = ((assert Primitive.True) (assert Primitive.True), discard (create ()))
    · ───
    ╰────
  help: Required constraints: Round 'a

        Add a type annotation that determines this variable.


nash::type::mismatch

  × this function is not a function; received 1 argument.
    ╭─[Main.nash:10:9]
  9 │ idfa x = x
 10 │ bad = ((assert Primitive.True) (assert Primitive.True), discard (create ()))
    ·         ─────────────────────
    ╰────
