crates/nash-solve/tests/snapshots/inference__recovery_keeps_independent_tuple_siblings_in_both_orders-4.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Missing 'a where\n    missing : 'a -> 'a\ntrait Round 'a where\n    create : () -> 'a\n    discard : 'a -> ()\ntype higher 'f = Higher ('f ())\nidfa : 'f 'a -> 'f 'a\nidfa x = x\nbad = (discard (create ()), (assert Primitive.True) (assert Primitive.True))\n"
info: diagnostic
---
nash::type::ambiguous_type

  × Cannot determine type `'a` in `bad`.
    ╭─[Main.nash:10:1]
  9 │ idfa x = x
 10 │ bad = (discard (create ()), (assert Primitive.True) (assert Primitive.True))
    · ───
    ╰────
  help: Required constraints: Round 'a

        Add a type annotation that determines this variable.


nash::type::mismatch

  × this function is not a function; received 1 argument.
    ╭─[Main.nash:10:30]
  9 │ idfa x = x
 10 │ bad = (discard (create ()), (assert Primitive.True) (assert Primitive.True))
    ·                              ─────────────────────
    ╰────
