crates/nash-solve/tests/snapshots/inference__recovery_keeps_independent_tuple_siblings_in_both_orders-6.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Missing 'a where\n    missing : 'a -> 'a\ntrait Round 'a where\n    create : () -> 'a\n    discard : 'a -> ()\ntype higher 'f = Higher ('f ())\nidfa : 'f 'a -> 'f 'a\nidfa x = x\nbad = (missing (), idfa (Higher []))\n"
info: diagnostic
---
nash::type::bad_kind

  × Kind mismatch in `type application`: expected `Type`, found `Type -> Type`.
    ╭─[Main.nash:9:1]
  8 │ idfa : 'f 'a -> 'f 'a
  9 │ idfa x = x
    · ────
 10 │ bad = (missing (), idfa (Higher []))
    ╰────
  help: Type arguments:

        Check type-constructor arguments and the annotation's quantified kinds.


nash::type::missing_impl

  × No impl for `Missing unit`.
    ╭─[Main.nash:10:8]
  9 │ idfa x = x
 10 │ bad = (missing (), idfa (Higher []))
    ·        ───┬───
    ·           ╰── required by `missing`
    ╰────
  help: Import or define an impl for `Missing unit`.
