crates/nash-solve/tests/snapshots/inference__recovery_keeps_independent_tuple_siblings_in_both_orders.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Missing 'a where\n    missing : 'a -> 'a\ntrait Round 'a where\n    create : () -> 'a\n    discard : 'a -> ()\ntype higher 'f = Higher ('f ())\nidfa : 'f 'a -> 'f 'a\nidfa x = x\nbad = (() (), missing ())\n"
info: diagnostic
---
nash::type::missing_impl

  × No impl for `Missing unit`.
    ╭─[Main.nash:10:15]
  9 │ idfa x = x
 10 │ bad = (() (), missing ())
    ·               ───┬───
    ·                  ╰── required by `missing`
    ╰────
  help: Import or define an impl for `Missing unit`.


nash::type::mismatch

  × this function is not a function; received 1 argument.
    ╭─[Main.nash:10:8]
  9 │ idfa x = x
 10 │ bad = (() (), missing ())
    ·        ──
    ╰────
