crates/nash-solve/tests/snapshots/inference__recovery_mixed_errors_reversed.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Literal exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntrait FromInt 'a where\n    fromInt : int -> 'a\ntrait FromString 'a where\n    fromString : string -> 'a\ntrait FromBytes 'a where\n    fromBytes : bytes -> 'a\nimpl FromInt int where\n    fromInt x = x\nimpl FromString string where\n    fromString x = x\nimpl FromBytes bytes where\n    fromBytes x = x\n\n\nmodule Main exposing (..)\ntrait Round 'a where\n    create : () -> 'a\n    discard : 'a -> ()\ntype higher 'f = Higher ('f ())\nidfa : 'f 'a -> 'f 'a\nidfa x = x\nkind = idfa (Higher [])\nambiguous = discard (create ())\nconstraint : 'a -> ()\nconstraint x = discard x\nmissing = discard ()\nmismatch : ()\nmismatch = \\x -> x\n"
info: diagnostic
---
nash::type::bad_kind

  × Kind mismatch in `type application`: expected `Type -> Type`, found `Type`.
   ╭─[Main.nash:8:1]
 7 │ idfa x = x
 8 │ kind = idfa (Higher [])
   · ────
 9 │ ambiguous = discard (create ())
   ╰────
  help: Type arguments:

        Check type-constructor arguments and the annotation's quantified kinds.


nash::type::ambiguous_type

  × Cannot determine type `'a` in `ambiguous`.
    ╭─[Main.nash:9:1]
  8 │ kind = idfa (Higher [])
  9 │ ambiguous = discard (create ())
    · ─────────
 10 │ constraint : 'a -> ()
    ╰────
  help: Required constraints: Round 'a

        Add a type annotation that determines this variable.


nash::type::missing_constraint

  × `discard` requires undeclared constraint `Round 'a`.
    ╭─[Main.nash:11:16]
 10 │ constraint : 'a -> ()
 11 │ constraint x = discard x
    · ─────┬────     ───┬───
    ·      │            ╰── constraint required here
    ·      ╰── annotation for `constraint`
 12 │ missing = discard ()
    ╰────
  help: Add `Round 'a` to the annotation for `constraint`.


nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
    ╭─[Main.nash:14:12]
 12 │ missing = discard ()
 13 │ mismatch : ()
    ·            ─┬
    ·             ╰── declared type
 14 │ mismatch = \x -> x
    ·            ───┬───
    ·               ╰── body of `mismatch`
    ╰────


nash::type::missing_impl

  × No impl for `Round unit`.
    ╭─[Main.nash:12:11]
 11 │ constraint x = discard x
 12 │ missing = discard ()
    ·           ───┬───
    ·              ╰── required by `discard`
 13 │ mismatch : ()
    ╰────
  help: Import or define an impl for `Round unit`.
